[package]
name = "runtc"
version = "0.1.0"
authors = ["mute1997 <mute1008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
exitcode = "1.1.2"
log = "0.4.8"
log4rs = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
